fix: spacing in courses

--- a/src/sections/OurCourses/styles.module.scss
+++ b/src/sections/OurCourses/styles.module.scss
@@ -243,6 +243,7 @@
 
       .courses {
         position: initial;
+        padding: 0px !important;
       }
     }
 
